edited swag notation
