# docs/swagger.yaml
@@ -193,8 +193,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "202":
+          description: Accepted
         "400":
           description: Bad Request
           schema:
